--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,9 @@
         </nav>
     </header>
     <div class="a">
-        <p class="titulo">TerraTrade, distribuidor e intermediario de productos</p>
+        <p class="titulo">TerraTrade, distribuidor e intermediario de productos<b>
+            prueba
+        </b></p>
     </div>
     <footer>
 
